# technique-generator

./: .dockerignore  .gemini_resume.md  .gitignore  BaseGui.py  BaseWaveforms.py  BatchGenerator.py  CHANGELOG.md  DOCKER_INSTRUCTIONS.md  Dockerfile  FUTURE_PLANS.md  LLM_HANDOVER_DOCUMENT.md  PROJECT_ARCHITECT_PROMPT.md  PredatorJammer.py  README.md  SystemCalibrator.py  TECHNIQUES.md  TechniqueMaker.py  bundle_offline.sh  cal_table_test.csv  calibration_matrix.json  calibrator_presets.json  fix_generators.py  install.sh  lcc  run_docker.sh  run_standalone.sh  test_advanced_dsp.py  test_sticky.py  test_target_list.py
apps/: BaseGui.py  BatchGenerator.py  PredatorJammer.py  SystemCalibrator.py  core_utils.py
config/: calibration_matrix.json  calibrator_presets.json  predator_preset.json  predator_presets.json  system_config.json
docs/: FUTURE_PLANS.md  TECHNIQUES.md
gr-techniquemaker/: CMakeLists.txt  MANIFEST.md  test_techniquepdu.py
gr-techniquemaker/.conda/: README.md
predator-cpp/: CMakeLists.txt
predator-cpp/src/: InterdictionController.cpp  InterdictionController.hpp  MainWindow.cpp  MainWindow.hpp  TacticalLogger.hpp  TelemetryModel.cpp  TelemetryModel.hpp  WaveformEngine.cpp  WaveformEngine.hpp  main.cpp
sidekiq-sng/: Makefile  USAGE_GUIDE.md  WaveformEngine.cpp  WaveformEngine.hpp  build_on_target.sh  main.cpp  sng  sng_console.py
sidekiq_ai_bundle/: Phase 1 Launch the Engine.txt
tests/: test_advanced_dsp.py  test_waveform_parity.py  waterfallfloat.grc  waterfallfloatMusic.grc  waterfallfloatsigmf.grc  waterfallint.grc
(+44 files in other folders)
